Fix menu font sizes on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -330,11 +330,17 @@ nav {
 
 nav a {
   display: block;
-  font-size: 3em;
+  font-size: 2.5em;
   color: #E8007B;
-  line-height: 5.5rem;
+  line-height: 1.8em;
   text-decoration: none;
   font-weight: 300;
+}
+
+@media (min-height:41rem) {
+  nav a {
+    font-size: 3em;
+  }
 }
 
 /* * * MAIN * * */
